@@ -8772,6 +8772,76 @@ static const canon_modeuse_t canon_MULTIPASS_MX700_modeuses[] = {
 
 DECLARE_MODEUSES(canon_MULTIPASS_MX700);
 
+/* ----------------------------------- Canon MX710  ----------------------------------- */
+static const char* canon_MULTIPASS_MX710_modeuses_plain[] = {
+  "600x600dpi_high",
+  "600x600dpi_high2",/* duplex */
+  "600x600dpi",
+  "600x600dpi_std2", /* duplex */
+  "300x300dpi",
+  NULL
+};
+
+static const char* canon_MULTIPASS_MX710_modeuses_PPplusG2[] = {
+  "600x600dpi_photohigh",
+  "600x600dpi_photo",
+  NULL
+};
+
+/* highest mode unsupported */
+static const char* canon_MULTIPASS_MX710_modeuses_PPproPlat[] = {
+  "600x600dpi_photohigh",
+  "600x600dpi_photo",
+  NULL
+};
+
+static const char* canon_MULTIPASS_MX710_modeuses_PPmatte[] = {
+  "600x600dpi_photohigh",
+  "600x600dpi_photo2",
+  NULL
+};
+
+static const char* canon_MULTIPASS_MX710_modeuses_inkjetHagaki[] = {
+  "600x600dpi_photohigh3",
+  "600x600dpi_photo3",
+  NULL
+};
+
+static const char* canon_MULTIPASS_MX710_modeuses_Hagaki[] = {
+  "600x600dpi_high3",
+  "600x600dpi_std3",
+  NULL
+};
+
+static const char* canon_MULTIPASS_MX710_modeuses_TShirt[] = {
+  "600x600dpi_tshirt",
+  NULL
+};
+
+static const char* canon_MULTIPASS_MX710_modeuses_PPother[] = {
+  "600x600dpi_photo",
+  NULL
+};
+
+static const canon_modeuse_t canon_MULTIPASS_MX710_modeuses[] = {
+  { "Plain",            canon_MULTIPASS_MX710_modeuses_plain, DUPLEX_SUPPORT | DUPLEX_MODEREPL },
+  { "PhotoPlusGloss2",  canon_MULTIPASS_MX710_modeuses_PPplusG2, 0 },
+  { "PhotoProPlat",	canon_MULTIPASS_MX710_modeuses_PPproPlat, 0 },
+  { "PhotoProSemiGloss",canon_MULTIPASS_MX710_modeuses_PPplusG2, 0 },
+  { "PhotopaperMatte",	canon_MULTIPASS_MX710_modeuses_PPmatte, 0 },
+  { "GlossyPaper",	canon_MULTIPASS_MX710_modeuses_PPplusG2, 0 },
+  { "Coated",		canon_MULTIPASS_MX710_modeuses_PPmatte, 0 },
+  { "HagakiA", 	        canon_MULTIPASS_MX710_modeuses_Hagaki, DUPLEX_SUPPORT },
+  { "InkJetHagaki", 	canon_MULTIPASS_MX710_modeuses_inkjetHagaki, 0 },
+  { "CanonPhotoHagakiK",canon_MULTIPASS_MX710_modeuses_PPplusG2, 0 },
+  { "Hagaki", 	        canon_MULTIPASS_MX710_modeuses_Hagaki, DUPLEX_SUPPORT },
+  { "TShirt",		canon_MULTIPASS_MX710_modeuses_TShirt, 0 },
+  { "Envelope",		canon_MULTIPASS_MX710_modeuses_Hagaki, 0 },
+  { "PhotopaperOther",	canon_MULTIPASS_MX710_modeuses_PPother, 0 },
+};
+
+DECLARE_MODEUSES(canon_MULTIPASS_MX710);
+
 /* ----------------------------------- Canon MX850  ----------------------------------- */
 static const char* canon_MULTIPASS_MX850_modeuses_plain[] = {
   "600x600dpi_high",
