@@ -2749,6 +2749,22 @@ static const canon_cap_t canon_model_capabilities[] =
     NULL,
     iP4500_channel_order
   },
+  { /* Canon MULTIPASS MX710 --- with XML */
+    "PIXMA MX710", 3,          /*model, model_id*/
+    842, INCH(17),       /* max paper width and height */
+    10, 10, 9, 15,    /*border_left, border_right, border_top, border_bottom */
+    &canon_PIXMA_MG5100_slotlist,
+    CANON_CAP_STD0|CANON_CAP_DUPLEX|CANON_CAP_px|CANON_CAP_P|CANON_CAP_I|CANON_CAP_XML,0,
+    3,8, /* ESC (l and (P command lengths */
+    control_cmd_PIXMA_MG5300, /*features*/
+    &canon_MULTIPASS_MX710_modelist,
+    &canon_MULTIPASS_MX420_paperlist,
+    &canon_MULTIPASS_MX710_modeuselist,
+    NULL,
+    NULL,
+    NULL,
+    iP4500_channel_order
+  },
   { /* Canon MULTIPASS MX850 */
     "PIXMA MX850", 3,          /*model, model_id*/
     842, INCH(17),       /* max paper width and height */
